<resources>
    <string name="app_name">Controle de Presença</string>
    <string name="str_palestrantes">Palestrantes</string>
    <string name="str_descricao">"Gerencie seus eventos de forma prática! Cadastre, edite e adicione participantes rapidamente utilizando QR Code."</string>

    <!-- Itens menu drawer-->
    <string name="str_home">Página Inicial</string>
    <string name="str_novo_evento">Novo Evento</string>
    <string name="str_eventos">Eventos Cadastrados</string>

    <!-- Nome das Telas -->
    <string name="str_evento_cadastro">Cadastro de Evento</string>
    <string name="str_evento_manutencao">Atualizar Evento</string>
    <string name="str_palestrante_cadastro">Cadastro de Palestrante</string>
    <string name="str_palestrante_manutencao">Atualizar informações do Palestrante</string>
    <string name="str_lista_participante">Lista de Participantes</string>
    <string name="str_checkin_participante">Check-in Participante</string>


    <!-- Botões -->
    <string name="str_btn_cadastrar">Cadastrar</string>
    <string name="str_btn_atualizar">Atualizar</string>
    <string name="str_btn_excluir">Excluir</string>
    <string name="aberto">Aberto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>